build: upgrade to JDK 21